Fixed pylint and flake errors

--- a/Internet_Analysis.ipynb
+++ b/Internet_Analysis.ipynb
@@ -6,7 +6,7 @@
       "name": "Internet Analysis.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNYEbMKBcU7Ce9fwxjl7TJ2",
+      "authorship_tag": "ABX9TyOqX7BqzQxWTVewrnbGMgje",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -55,7 +55,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e198d40e-3b9f-4066-ed8a-205673e65459"
+        "outputId": "c23e73f8-b82a-4bc4-82a4-3691ecc1e5de"
       },
       "source": [
         "!pip install pandas\n",
@@ -68,28 +68,28 @@
           "output_type": "stream",
           "text": [
             "Requirement already satisfied: pandas in /usr/local/lib/python3.7/dist-packages (1.1.5)\n",
+            "Requirement already satisfied: python-dateutil>=2.7.3 in /usr/local/lib/python3.7/dist-packages (from pandas) (2.8.2)\n",
             "Requirement already satisfied: pytz>=2017.2 in /usr/local/lib/python3.7/dist-packages (from pandas) (2018.9)\n",
             "Requirement already satisfied: numpy>=1.15.4 in /usr/local/lib/python3.7/dist-packages (from pandas) (1.19.5)\n",
-            "Requirement already satisfied: python-dateutil>=2.7.3 in /usr/local/lib/python3.7/dist-packages (from pandas) (2.8.2)\n",
             "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.7/dist-packages (from python-dateutil>=2.7.3->pandas) (1.15.0)\n",
             "Requirement already satisfied: matplotlib in /usr/local/lib/python3.7/dist-packages (3.2.2)\n",
-            "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib) (2.4.7)\n",
-            "Requirement already satisfied: numpy>=1.11 in /usr/local/lib/python3.7/dist-packages (from matplotlib) (1.19.5)\n",
             "Requirement already satisfied: python-dateutil>=2.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib) (2.8.2)\n",
-            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.7/dist-packages (from matplotlib) (0.10.0)\n",
             "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib) (1.3.1)\n",
+            "Requirement already satisfied: numpy>=1.11 in /usr/local/lib/python3.7/dist-packages (from matplotlib) (1.19.5)\n",
+            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.7/dist-packages (from matplotlib) (0.10.0)\n",
+            "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib) (2.4.7)\n",
             "Requirement already satisfied: six in /usr/local/lib/python3.7/dist-packages (from cycler>=0.10->matplotlib) (1.15.0)\n",
             "Requirement already satisfied: IPython in /usr/local/lib/python3.7/dist-packages (5.5.0)\n",
-            "Requirement already satisfied: setuptools>=18.5 in /usr/local/lib/python3.7/dist-packages (from IPython) (57.2.0)\n",
-            "Requirement already satisfied: prompt-toolkit<2.0.0,>=1.0.4 in /usr/local/lib/python3.7/dist-packages (from IPython) (1.0.18)\n",
-            "Requirement already satisfied: pexpect in /usr/local/lib/python3.7/dist-packages (from IPython) (4.8.0)\n",
-            "Requirement already satisfied: simplegeneric>0.8 in /usr/local/lib/python3.7/dist-packages (from IPython) (0.8.1)\n",
             "Requirement already satisfied: decorator in /usr/local/lib/python3.7/dist-packages (from IPython) (4.4.2)\n",
+            "Requirement already satisfied: pickleshare in /usr/local/lib/python3.7/dist-packages (from IPython) (0.7.5)\n",
+            "Requirement already satisfied: pexpect in /usr/local/lib/python3.7/dist-packages (from IPython) (4.8.0)\n",
             "Requirement already satisfied: pygments in /usr/local/lib/python3.7/dist-packages (from IPython) (2.6.1)\n",
             "Requirement already satisfied: traitlets>=4.2 in /usr/local/lib/python3.7/dist-packages (from IPython) (5.0.5)\n",
-            "Requirement already satisfied: pickleshare in /usr/local/lib/python3.7/dist-packages (from IPython) (0.7.5)\n",
-            "Requirement already satisfied: six>=1.9.0 in /usr/local/lib/python3.7/dist-packages (from prompt-toolkit<2.0.0,>=1.0.4->IPython) (1.15.0)\n",
+            "Requirement already satisfied: simplegeneric>0.8 in /usr/local/lib/python3.7/dist-packages (from IPython) (0.8.1)\n",
+            "Requirement already satisfied: prompt-toolkit<2.0.0,>=1.0.4 in /usr/local/lib/python3.7/dist-packages (from IPython) (1.0.18)\n",
+            "Requirement already satisfied: setuptools>=18.5 in /usr/local/lib/python3.7/dist-packages (from IPython) (57.2.0)\n",
             "Requirement already satisfied: wcwidth in /usr/local/lib/python3.7/dist-packages (from prompt-toolkit<2.0.0,>=1.0.4->IPython) (0.2.5)\n",
+            "Requirement already satisfied: six>=1.9.0 in /usr/local/lib/python3.7/dist-packages (from prompt-toolkit<2.0.0,>=1.0.4->IPython) (1.15.0)\n",
             "Requirement already satisfied: ipython-genutils in /usr/local/lib/python3.7/dist-packages (from traitlets>=4.2->IPython) (0.2.0)\n",
             "Requirement already satisfied: ptyprocess>=0.5 in /usr/local/lib/python3.7/dist-packages (from pexpect->IPython) (0.7.0)\n"
           ],
@@ -119,12 +119,12 @@
           "height": 618
         },
         "id": "kA30xmOUNK77",
-        "outputId": "ce73694b-2d22-4260-d8e9-520c2ff45af7"
+        "outputId": "a291fde9-09dc-49a4-c13b-a6f44a61ff01"
       },
       "source": [
         "datadf = pd.read_csv('https://raw.githubusercontent.com/\\\n",
         "Priya378/Internet-Analysis-Project/main/data.csv')\n",
-        "datadf.rename(columns={\"Unnamed: 0\":\"Time\"}, inplace=True)\n",
+        "datadf.rename(columns={\"Unnamed: 0\": \"Time\"}, inplace=True)\n",
         "d.display(datadf)"
       ],
       "execution_count": null,
@@ -366,7 +366,7 @@
           "height": 632
         },
         "id": "-FOqwqHGWoEZ",
-        "outputId": "0a15d810-4f4d-48c5-9538-3cc86fd96537"
+        "outputId": "41f36cc4-19b2-4c6d-caa1-af4eb4770559"
       },
       "source": [
         "outagedf = datadf.set_index(\"Time\", inplace=False)  # pylint: disable=no-member\n",
@@ -602,7 +602,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 805
         },
-        "outputId": "711d4663-90dd-4f8c-ba6f-6a280c4a098e"
+        "outputId": "88f7b397-ebe2-41de-88e3-d543da56cd02"
       },
       "source": [
         "hour_outagedf = pd.DataFrame({\"Count\": hour_outages}).sort_values([\"Count\"], ascending=0)\n",
@@ -786,7 +786,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 207
         },
-        "outputId": "70e46647-6acd-4fa4-da9a-5b69fb5865ee"
+        "outputId": "25e39973-6ba1-4aac-b986-481de88fa557"
       },
       "source": [
         "keys = hour_outages.keys()\n",
@@ -833,10 +833,11 @@
           "base_uri": "https://localhost:8080/",
           "height": 282
         },
-        "outputId": "d7d721f2-dfe4-425a-b01d-828f73374be1"
+        "outputId": "bcc0043c-a630-4475-fbbb-bae8a51a2fc2"
       },
       "source": [
-        "day_outagedf = pd.DataFrame({\"Count of Days\": day_outages}).sort_values([\"Count of Days\"], ascending=0)\n",
+        "day_outagedf = pd.DataFrame({\"Count of Days\": day_outages}).\\\n",
+        "sort_values([\"Count of Days\"], ascending=0)\n",
         "print(\"Number of outages in each week day:\")\n",
         "d.display(day_outagedf)"
       ],
@@ -932,7 +933,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 324
         },
-        "outputId": "56b75e40-318c-4bff-c6c9-e7f131f2fe6f"
+        "outputId": "71cd6fef-adbe-41d2-8190-38d68a69a7bb"
       },
       "source": [
         "keys = day_outages.keys()\n",
@@ -979,7 +980,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 743
         },
-        "outputId": "8a4e1f92-d963-42ba-c338-34d8a7a953b7"
+        "outputId": "92b08867-f630-407b-ee86-9237896ec1b9"
       },
       "source": [
         "connections = pd.DataFrame({\"Connections\": servers})\n",
@@ -1172,7 +1173,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 820
         },
-        "outputId": "f9b40e66-bfbe-4c2a-9ca1-e29c853f2cd6"
+        "outputId": "e5e1d72a-d5d9-4a19-97a1-0c8e33b822d1"
       },
       "source": [
         "df = datadf.copy()\n",
@@ -1392,11 +1393,11 @@
       },
       "source": [
         "daydf = df.groupby(\"Day\").agg({\n",
-        "  \"Latency\": \"mean\",\n",
-        "  \"Jitter\": \"mean\",\n",
-        "  \"Download\": \"mean\",\n",
-        "  \"Upload\": \"mean\",\n",
-        " \"Packet Loss\": \"mean\"}).round(2)"
+        "    \"Latency\": \"mean\",\n",
+        "    \"Jitter\": \"mean\",\n",
+        "    \"Download\": \"mean\",\n",
+        "    \"Upload\": \"mean\",\n",
+        "    \"Packet Loss\": \"mean\"}).round(2)"
       ],
       "execution_count": null,
       "outputs": []
@@ -1409,7 +1410,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 295
         },
-        "outputId": "1e2adb53-f519-4076-ffd6-be76b4cb80e5"
+        "outputId": "04ec6186-2df3-4365-b94f-6b187d15ba80"
       },
       "source": [
         "d.display(daydf)"
@@ -1551,7 +1552,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 203
         },
-        "outputId": "3095866e-be08-46f0-e40e-8c6689ce8b60"
+        "outputId": "3cfed404-b1b1-4978-c50d-83ad6f54ef7c"
       },
       "source": [
         "d.display(daydf_analyse)"
@@ -1693,7 +1694,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 819
         },
-        "outputId": "d2d6260f-e6d3-49cd-adf7-2ab26681e786"
+        "outputId": "4eed8900-8da4-49f7-fe0a-396a330639aa"
       },
       "source": [
         "d.display(hourdf)"
@@ -1988,7 +1989,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 203
         },
-        "outputId": "df6e40c8-1673-4355-e4bf-d955724f40f0"
+        "outputId": "e2c3d082-cf40-4813-dc96-4e5ff82d37be"
       },
       "source": [
         "d.display(hourdf_analyse)"
@@ -2114,7 +2115,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 820
         },
-        "outputId": "dc2aab1a-1f72-4b86-9e41-30c54465717f"
+        "outputId": "451d5fef-606c-423b-8baf-704b39a026d5"
       },
       "source": [
         "d.display(df)"
@@ -2321,12 +2322,12 @@
         "id": "tW84Vqrhi1Cu"
       },
       "source": [
-        "analysed = df.groupby([\"Day\",\"Hour\"]).agg({\n",
-        "   \"Latency\": \"mean\",\n",
-        "   \"Jitter\": \"mean\",\n",
-        "   \"Download\": \"mean\",\n",
-        "   \"Upload\": \"mean\",\n",
-        "   \"Packet Loss\": \"mean\"\n",
+        "analysed = df.groupby([\"Day\", \"Hour\"]).agg({\n",
+        "    \"Latency\": \"mean\",\n",
+        "    \"Jitter\": \"mean\",\n",
+        "    \"Download\": \"mean\",\n",
+        "    \"Upload\": \"mean\",\n",
+        "    \"Packet Loss\": \"mean\"\n",
         "}).round(2)"
       ],
       "execution_count": null,
@@ -2340,7 +2341,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 447
         },
-        "outputId": "af265430-ac00-4ff4-c1a0-d124aa405752"
+        "outputId": "27644ff0-3ada-44dd-8258-9b55a897d318"
       },
       "source": [
         "d.display(analysed)"
@@ -2525,11 +2526,11 @@
       },
       "source": [
         "overall_df = analysed.groupby(\"Day\").agg({\n",
-        "  \"Latency\": [\"min\",\"idxmin\",\"max\",\"idxmax\"],\n",
-        "  \"Jitter\": [\"min\",\"idxmin\",\"max\",\"idxmax\"],\n",
-        "  \"Download\": [\"min\",\"idxmin\",\"max\",\"idxmax\"],\n",
-        "  \"Upload\": [\"min\",\"idxmin\",\"max\",\"idxmax\"],\n",
-        " \"Packet Loss\": [\"min\",\"idxmin\",\"max\",\"idxmax\"]})"
+        "    \"Latency\": [\"min\", \"idxmin\", \"max\", \"idxmax\"],\n",
+        "    \"Jitter\": [\"min\", \"idxmin\", \"max\", \"idxmax\"],\n",
+        "    \"Download\": [\"min\", \"idxmin\", \"max\", \"idxmax\"],\n",
+        "    \"Upload\": [\"min\", \"idxmin\", \"max\", \"idxmax\"],\n",
+        "    \"Packet Loss\": [\"min\", \"idxmin\", \"max\", \"idxmax\"]})"
       ],
       "execution_count": null,
       "outputs": []
@@ -2542,7 +2543,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 464
         },
-        "outputId": "ff2697fc-8057-4bc1-8a2f-57a67a8d45b9"
+        "outputId": "5d00e0ce-f2be-4552-e310-a4f6fa70b45c"
       },
       "source": [
         "d.display(overall_df)"
@@ -2832,10 +2833,10 @@
       "source": [
         "columns = [\"Latency\", \"Jitter\", \"Download\", \"Upload\", \"Packet Loss\"]\n",
         "for col in columns:\n",
-        "    overall_df[(col, \"idxmin\")] = analysed.loc[overall_df[col][\"idxmin\"]]\\\n",
-        "    .index.get_level_values(1)\n",
-        "    overall_df[(col,\"idxmax\")] = analysed.loc[overall_df[col][\"idxmax\"]]\\\n",
-        "    .index.get_level_values(1)"
+        "      overall_df[(col, \"idxmin\")] = analysed.loc[overall_df[col][\"idxmin\"]]\\\n",
+        "      .index.get_level_values(1)\n",
+        "      overall_df[(col,\"idxmax\")] = analysed.loc[overall_df[col][\"idxmax\"]]\\\n",
+        "      .index.get_level_values(1)"
       ],
       "execution_count": null,
       "outputs": []
@@ -2846,7 +2847,7 @@
         "id": "PVeD7oidgiGB"
       },
       "source": [
-        "overall_df = overall_df.rename(columns = {\n",
+        "overall_df = overall_df.rename(columns={\n",
         "    \"idxmin\": \"Hour (Min)\",\n",
         "    \"idxmax\": \"Hour (Max)\"\n",
         "})"
@@ -2862,7 +2863,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 363
         },
-        "outputId": "d5d6146b-0a62-4d03-89e1-32c798e16e38"
+        "outputId": "66ecde9a-ba14-4542-edb6-bc0df6376f78"
       },
       "source": [
         "d.display(overall_df)"
@@ -3154,7 +3155,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 343
         },
-        "outputId": "73002d69-16de-4a43-b59e-42e717a6af5c"
+        "outputId": "d0c5c89c-043f-4765-97c9-398751543e25"
       },
       "source": [
         "d.display(final_df)"
@@ -3365,12 +3366,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8639e3b4-7f36-4962-a257-4265debb9dae"
+        "outputId": "b92a5c57-71ed-4fe8-d003-c259e175c92f"
       },
       "source": [
         "Min_Latency_Day = overall_df[\"Latency\", \"min\"].idxmin()\n",
         "Corresponding_hour = overall_df.loc[overall_df[\"Latency\", \"min\"].idxmin()][\"Latency\"][\"Hour (Min)\"]\n",
-        "print(\"Best day and hour for low latency activities: \"\\\n",
+        "print(\"Best day and hour for low latency activities: \"\n",
         "      , Min_Latency_Day, \"and\", Corresponding_hour, \"IST.\")"
       ],
       "execution_count": null,
