--- a/Internet_Analysis.ipynb
+++ b/Internet_Analysis.ipynb
@@ -6,7 +6,7 @@
       "name": "Internet Analysis.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOqX7BqzQxWTVewrnbGMgje",
+      "authorship_tag": "ABX9TyPVI6NoElJ4ntYc6QTncGLX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -55,7 +55,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c23e73f8-b82a-4bc4-82a4-3691ecc1e5de"
+        "outputId": "7a2fec4d-47d2-4554-bbd3-a7855b4c026d"
       },
       "source": [
         "!pip install pandas\n",
@@ -68,25 +68,25 @@
           "output_type": "stream",
           "text": [
             "Requirement already satisfied: pandas in /usr/local/lib/python3.7/dist-packages (1.1.5)\n",
+            "Requirement already satisfied: numpy>=1.15.4 in /usr/local/lib/python3.7/dist-packages (from pandas) (1.19.5)\n",
             "Requirement already satisfied: python-dateutil>=2.7.3 in /usr/local/lib/python3.7/dist-packages (from pandas) (2.8.2)\n",
             "Requirement already satisfied: pytz>=2017.2 in /usr/local/lib/python3.7/dist-packages (from pandas) (2018.9)\n",
-            "Requirement already satisfied: numpy>=1.15.4 in /usr/local/lib/python3.7/dist-packages (from pandas) (1.19.5)\n",
             "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.7/dist-packages (from python-dateutil>=2.7.3->pandas) (1.15.0)\n",
             "Requirement already satisfied: matplotlib in /usr/local/lib/python3.7/dist-packages (3.2.2)\n",
-            "Requirement already satisfied: python-dateutil>=2.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib) (2.8.2)\n",
-            "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib) (1.3.1)\n",
-            "Requirement already satisfied: numpy>=1.11 in /usr/local/lib/python3.7/dist-packages (from matplotlib) (1.19.5)\n",
-            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.7/dist-packages (from matplotlib) (0.10.0)\n",
             "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib) (2.4.7)\n",
+            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.7/dist-packages (from matplotlib) (0.10.0)\n",
+            "Requirement already satisfied: python-dateutil>=2.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib) (2.8.2)\n",
+            "Requirement already satisfied: numpy>=1.11 in /usr/local/lib/python3.7/dist-packages (from matplotlib) (1.19.5)\n",
+            "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib) (1.3.1)\n",
             "Requirement already satisfied: six in /usr/local/lib/python3.7/dist-packages (from cycler>=0.10->matplotlib) (1.15.0)\n",
             "Requirement already satisfied: IPython in /usr/local/lib/python3.7/dist-packages (5.5.0)\n",
             "Requirement already satisfied: decorator in /usr/local/lib/python3.7/dist-packages (from IPython) (4.4.2)\n",
-            "Requirement already satisfied: pickleshare in /usr/local/lib/python3.7/dist-packages (from IPython) (0.7.5)\n",
-            "Requirement already satisfied: pexpect in /usr/local/lib/python3.7/dist-packages (from IPython) (4.8.0)\n",
-            "Requirement already satisfied: pygments in /usr/local/lib/python3.7/dist-packages (from IPython) (2.6.1)\n",
-            "Requirement already satisfied: traitlets>=4.2 in /usr/local/lib/python3.7/dist-packages (from IPython) (5.0.5)\n",
-            "Requirement already satisfied: simplegeneric>0.8 in /usr/local/lib/python3.7/dist-packages (from IPython) (0.8.1)\n",
             "Requirement already satisfied: prompt-toolkit<2.0.0,>=1.0.4 in /usr/local/lib/python3.7/dist-packages (from IPython) (1.0.18)\n",
+            "Requirement already satisfied: traitlets>=4.2 in /usr/local/lib/python3.7/dist-packages (from IPython) (5.0.5)\n",
+            "Requirement already satisfied: pickleshare in /usr/local/lib/python3.7/dist-packages (from IPython) (0.7.5)\n",
+            "Requirement already satisfied: pygments in /usr/local/lib/python3.7/dist-packages (from IPython) (2.6.1)\n",
+            "Requirement already satisfied: simplegeneric>0.8 in /usr/local/lib/python3.7/dist-packages (from IPython) (0.8.1)\n",
+            "Requirement already satisfied: pexpect in /usr/local/lib/python3.7/dist-packages (from IPython) (4.8.0)\n",
             "Requirement already satisfied: setuptools>=18.5 in /usr/local/lib/python3.7/dist-packages (from IPython) (57.2.0)\n",
             "Requirement already satisfied: wcwidth in /usr/local/lib/python3.7/dist-packages (from prompt-toolkit<2.0.0,>=1.0.4->IPython) (0.2.5)\n",
             "Requirement already satisfied: six>=1.9.0 in /usr/local/lib/python3.7/dist-packages (from prompt-toolkit<2.0.0,>=1.0.4->IPython) (1.15.0)\n",
@@ -116,10 +116,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 618
+          "height": 417
         },
         "id": "kA30xmOUNK77",
-        "outputId": "a291fde9-09dc-49a4-c13b-a6f44a61ff01"
+        "outputId": "7a01d629-5c3c-412f-b814-fbb211674a31"
       },
       "source": [
         "datadf = pd.read_csv('https://raw.githubusercontent.com/\\\n",
@@ -363,10 +363,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 632
+          "height": 447
         },
         "id": "-FOqwqHGWoEZ",
-        "outputId": "41f36cc4-19b2-4c6d-caa1-af4eb4770559"
+        "outputId": "ac5db46a-dfe8-4ebe-bd28-7dbebbfb1a22"
       },
       "source": [
         "outagedf = datadf.set_index(\"Time\", inplace=False)  # pylint: disable=no-member\n",
@@ -602,7 +602,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 805
         },
-        "outputId": "88f7b397-ebe2-41de-88e3-d543da56cd02"
+        "outputId": "0ab41c6a-deb3-486d-f510-de28286949ae"
       },
       "source": [
         "hour_outagedf = pd.DataFrame({\"Count\": hour_outages}).sort_values([\"Count\"], ascending=0)\n",
@@ -784,9 +784,9 @@
         "id": "LB_7lVN3arOs",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 207
+          "height": 364
         },
-        "outputId": "25e39973-6ba1-4aac-b986-481de88fa557"
+        "outputId": "98c556c9-c946-4e54-fe0b-0be1c02e1ea3"
       },
       "source": [
         "keys = hour_outages.keys()\n",
@@ -833,11 +833,11 @@
           "base_uri": "https://localhost:8080/",
           "height": 282
         },
-        "outputId": "bcc0043c-a630-4475-fbbb-bae8a51a2fc2"
+        "outputId": "c053f517-ecbc-43e4-d66e-8439d4157f3f"
       },
       "source": [
         "day_outagedf = pd.DataFrame({\"Count of Days\": day_outages}).\\\n",
-        "sort_values([\"Count of Days\"], ascending=0)\n",
+        "    sort_values([\"Count of Days\"], ascending=0)\n",
         "print(\"Number of outages in each week day:\")\n",
         "d.display(day_outagedf)"
       ],
@@ -931,9 +931,9 @@
         "id": "-iN-0_JAbPgs",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 324
+          "height": 364
         },
-        "outputId": "71cd6fef-adbe-41d2-8190-38d68a69a7bb"
+        "outputId": "3dbcfaa8-7ffd-466a-d0e7-41da6f955128"
       },
       "source": [
         "keys = day_outages.keys()\n",
@@ -980,7 +980,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 743
         },
-        "outputId": "92b08867-f630-407b-ee86-9237896ec1b9"
+        "outputId": "8d9355c1-251b-4116-b190-acdf99e2ec2a"
       },
       "source": [
         "connections = pd.DataFrame({\"Connections\": servers})\n",
@@ -1171,9 +1171,9 @@
         "id": "rgldax80dig4",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 820
+          "height": 417
         },
-        "outputId": "e5e1d72a-d5d9-4a19-97a1-0c8e33b822d1"
+        "outputId": "71e60ef1-d77d-4098-df34-16d18952753c"
       },
       "source": [
         "df = datadf.copy()\n",
@@ -1410,7 +1410,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 295
         },
-        "outputId": "04ec6186-2df3-4365-b94f-6b187d15ba80"
+        "outputId": "a6a10077-92ed-42ea-c092-eb3d0e8d8ff8"
       },
       "source": [
         "d.display(daydf)"
@@ -1552,7 +1552,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 203
         },
-        "outputId": "3cfed404-b1b1-4978-c50d-83ad6f54ef7c"
+        "outputId": "be5bbc11-0a07-4b47-8494-6279892666e1"
       },
       "source": [
         "d.display(daydf_analyse)"
@@ -1677,11 +1677,11 @@
       },
       "source": [
         "hourdf = df.groupby(\"Hour\").agg({\n",
-        "  \"Latency\": \"mean\",\n",
-        "  \"Jitter\": \"mean\",\n",
-        "  \"Download\": \"mean\",\n",
-        "  \"Upload\": \"mean\",\n",
-        " \"Packet Loss\": \"mean\"}).round(2)"
+        "    \"Latency\": \"mean\",\n",
+        "    \"Jitter\": \"mean\",\n",
+        "    \"Download\": \"mean\",\n",
+        "    \"Upload\": \"mean\",\n",
+        "    \"Packet Loss\": \"mean\"}).round(2)"
       ],
       "execution_count": null,
       "outputs": []
@@ -1694,7 +1694,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 819
         },
-        "outputId": "4eed8900-8da4-49f7-fe0a-396a330639aa"
+        "outputId": "aadb0279-ad1f-4d2e-977f-ade402341bc8"
       },
       "source": [
         "d.display(hourdf)"
@@ -1989,7 +1989,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 203
         },
-        "outputId": "e2c3d082-cf40-4813-dc96-4e5ff82d37be"
+        "outputId": "e854bef4-e833-4f37-b512-53c2679ee64b"
       },
       "source": [
         "d.display(hourdf_analyse)"
@@ -2113,9 +2113,9 @@
         "id": "cTKG60SdgJOh",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 820
+          "height": 417
         },
-        "outputId": "451d5fef-606c-423b-8baf-704b39a026d5"
+        "outputId": "9345c71a-18c1-4db9-a92f-85ed4c10fca6"
       },
       "source": [
         "d.display(df)"
@@ -2341,7 +2341,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 447
         },
-        "outputId": "27644ff0-3ada-44dd-8258-9b55a897d318"
+        "outputId": "078e4c3f-7a3c-4797-bdf9-faca033b2f09"
       },
       "source": [
         "d.display(analysed)"
@@ -2541,9 +2541,9 @@
         "id": "ILzvaUWFjy9_",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 464
+          "height": 360
         },
-        "outputId": "5d00e0ce-f2be-4552-e310-a4f6fa70b45c"
+        "outputId": "05367586-84ac-4d2c-e055-7c92de570006"
       },
       "source": [
         "d.display(overall_df)"
@@ -2833,10 +2833,10 @@
       "source": [
         "columns = [\"Latency\", \"Jitter\", \"Download\", \"Upload\", \"Packet Loss\"]\n",
         "for col in columns:\n",
-        "      overall_df[(col, \"idxmin\")] = analysed.loc[overall_df[col][\"idxmin\"]]\\\n",
-        "      .index.get_level_values(1)\n",
-        "      overall_df[(col,\"idxmax\")] = analysed.loc[overall_df[col][\"idxmax\"]]\\\n",
-        "      .index.get_level_values(1)"
+        "    overall_df[(col, \"idxmin\")] = analysed.loc[overall_df[col][\"idxmin\"]]\\\n",
+        "    .index.get_level_values(1)\n",
+        "    overall_df[(col,\"idxmax\")] = analysed.loc[overall_df[col][\"idxmax\"]]\\\n",
+        "    .index.get_level_values(1)"
       ],
       "execution_count": null,
       "outputs": []
@@ -2861,9 +2861,9 @@
         "id": "5K5DLo69g2IC",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 363
+          "height": 326
         },
-        "outputId": "66ecde9a-ba14-4542-edb6-bc0df6376f78"
+        "outputId": "01816862-32cb-4614-d8d1-1cb3b9e5f815"
       },
       "source": [
         "d.display(overall_df)"
@@ -3153,9 +3153,9 @@
         "id": "0_-QZ8yrjIbE",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 343
+          "height": 326
         },
-        "outputId": "d0c5c89c-043f-4765-97c9-398751543e25"
+        "outputId": "27e2a6df-7b9b-403b-edde-c74aff34f57b"
       },
       "source": [
         "d.display(final_df)"
@@ -3366,13 +3366,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b92a5c57-71ed-4fe8-d003-c259e175c92f"
+        "outputId": "85142a2f-7c8e-435a-9bba-771ee91aa521"
       },
       "source": [
         "Min_Latency_Day = overall_df[\"Latency\", \"min\"].idxmin()\n",
         "Corresponding_hour = overall_df.loc[overall_df[\"Latency\", \"min\"].idxmin()][\"Latency\"][\"Hour (Min)\"]\n",
-        "print(\"Best day and hour for low latency activities: \"\n",
-        "      , Min_Latency_Day, \"and\", Corresponding_hour, \"IST.\")"
+        "print(\"Best day and hour for low latency activities: \", \n",
+        "    Min_Latency_Day, \"and\", Corresponding_hour, \"IST.\")"
       ],
       "execution_count": null,
       "outputs": [
