--- a/Internet_Analysis.ipynb
+++ b/Internet_Analysis.ipynb
@@ -6,7 +6,7 @@
       "name": "Internet Analysis.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPVI6NoElJ4ntYc6QTncGLX",
+      "authorship_tag": "ABX9TyNf/6y2d4X2++VDjviYfbNj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -55,7 +55,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7a2fec4d-47d2-4554-bbd3-a7855b4c026d"
+        "outputId": "a3ad28a5-7668-4af2-9bca-7e28ecbe53e2"
       },
       "source": [
         "!pip install pandas\n",
@@ -68,28 +68,28 @@
           "output_type": "stream",
           "text": [
             "Requirement already satisfied: pandas in /usr/local/lib/python3.7/dist-packages (1.1.5)\n",
-            "Requirement already satisfied: numpy>=1.15.4 in /usr/local/lib/python3.7/dist-packages (from pandas) (1.19.5)\n",
             "Requirement already satisfied: python-dateutil>=2.7.3 in /usr/local/lib/python3.7/dist-packages (from pandas) (2.8.2)\n",
+            "Requirement already satisfied: numpy>=1.15.4 in /usr/local/lib/python3.7/dist-packages (from pandas) (1.19.5)\n",
             "Requirement already satisfied: pytz>=2017.2 in /usr/local/lib/python3.7/dist-packages (from pandas) (2018.9)\n",
             "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.7/dist-packages (from python-dateutil>=2.7.3->pandas) (1.15.0)\n",
             "Requirement already satisfied: matplotlib in /usr/local/lib/python3.7/dist-packages (3.2.2)\n",
-            "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib) (2.4.7)\n",
-            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.7/dist-packages (from matplotlib) (0.10.0)\n",
             "Requirement already satisfied: python-dateutil>=2.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib) (2.8.2)\n",
+            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.7/dist-packages (from matplotlib) (0.10.0)\n",
             "Requirement already satisfied: numpy>=1.11 in /usr/local/lib/python3.7/dist-packages (from matplotlib) (1.19.5)\n",
+            "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib) (2.4.7)\n",
             "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib) (1.3.1)\n",
             "Requirement already satisfied: six in /usr/local/lib/python3.7/dist-packages (from cycler>=0.10->matplotlib) (1.15.0)\n",
             "Requirement already satisfied: IPython in /usr/local/lib/python3.7/dist-packages (5.5.0)\n",
+            "Requirement already satisfied: setuptools>=18.5 in /usr/local/lib/python3.7/dist-packages (from IPython) (57.2.0)\n",
+            "Requirement already satisfied: pygments in /usr/local/lib/python3.7/dist-packages (from IPython) (2.6.1)\n",
             "Requirement already satisfied: decorator in /usr/local/lib/python3.7/dist-packages (from IPython) (4.4.2)\n",
+            "Requirement already satisfied: pexpect in /usr/local/lib/python3.7/dist-packages (from IPython) (4.8.0)\n",
+            "Requirement already satisfied: pickleshare in /usr/local/lib/python3.7/dist-packages (from IPython) (0.7.5)\n",
+            "Requirement already satisfied: simplegeneric>0.8 in /usr/local/lib/python3.7/dist-packages (from IPython) (0.8.1)\n",
             "Requirement already satisfied: prompt-toolkit<2.0.0,>=1.0.4 in /usr/local/lib/python3.7/dist-packages (from IPython) (1.0.18)\n",
             "Requirement already satisfied: traitlets>=4.2 in /usr/local/lib/python3.7/dist-packages (from IPython) (5.0.5)\n",
-            "Requirement already satisfied: pickleshare in /usr/local/lib/python3.7/dist-packages (from IPython) (0.7.5)\n",
-            "Requirement already satisfied: pygments in /usr/local/lib/python3.7/dist-packages (from IPython) (2.6.1)\n",
-            "Requirement already satisfied: simplegeneric>0.8 in /usr/local/lib/python3.7/dist-packages (from IPython) (0.8.1)\n",
-            "Requirement already satisfied: pexpect in /usr/local/lib/python3.7/dist-packages (from IPython) (4.8.0)\n",
-            "Requirement already satisfied: setuptools>=18.5 in /usr/local/lib/python3.7/dist-packages (from IPython) (57.2.0)\n",
-            "Requirement already satisfied: wcwidth in /usr/local/lib/python3.7/dist-packages (from prompt-toolkit<2.0.0,>=1.0.4->IPython) (0.2.5)\n",
             "Requirement already satisfied: six>=1.9.0 in /usr/local/lib/python3.7/dist-packages (from prompt-toolkit<2.0.0,>=1.0.4->IPython) (1.15.0)\n",
+            "Requirement already satisfied: wcwidth in /usr/local/lib/python3.7/dist-packages (from prompt-toolkit<2.0.0,>=1.0.4->IPython) (0.2.5)\n",
             "Requirement already satisfied: ipython-genutils in /usr/local/lib/python3.7/dist-packages (from traitlets>=4.2->IPython) (0.2.0)\n",
             "Requirement already satisfied: ptyprocess>=0.5 in /usr/local/lib/python3.7/dist-packages (from pexpect->IPython) (0.7.0)\n"
           ],
@@ -119,7 +119,7 @@
           "height": 417
         },
         "id": "kA30xmOUNK77",
-        "outputId": "7a01d629-5c3c-412f-b814-fbb211674a31"
+        "outputId": "521a818e-8eb2-42e3-977f-4ca9cab0c079"
       },
       "source": [
         "datadf = pd.read_csv('https://raw.githubusercontent.com/\\\n",
@@ -366,7 +366,7 @@
           "height": 447
         },
         "id": "-FOqwqHGWoEZ",
-        "outputId": "ac5db46a-dfe8-4ebe-bd28-7dbebbfb1a22"
+        "outputId": "b6b2f995-6f1d-4b03-d6a2-f279f2a746ce"
       },
       "source": [
         "outagedf = datadf.set_index(\"Time\", inplace=False)  # pylint: disable=no-member\n",
@@ -602,7 +602,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 805
         },
-        "outputId": "0ab41c6a-deb3-486d-f510-de28286949ae"
+        "outputId": "7b88a2b7-500f-4bc1-a040-988e00e2662f"
       },
       "source": [
         "hour_outagedf = pd.DataFrame({\"Count\": hour_outages}).sort_values([\"Count\"], ascending=0)\n",
@@ -786,7 +786,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 364
         },
-        "outputId": "98c556c9-c946-4e54-fe0b-0be1c02e1ea3"
+        "outputId": "f9cbca99-ccd9-4cbf-a59e-e4b5ef6a4027"
       },
       "source": [
         "keys = hour_outages.keys()\n",
@@ -833,11 +833,11 @@
           "base_uri": "https://localhost:8080/",
           "height": 282
         },
-        "outputId": "c053f517-ecbc-43e4-d66e-8439d4157f3f"
+        "outputId": "c91b2302-fcc6-489c-ae06-345930b7badb"
       },
       "source": [
         "day_outagedf = pd.DataFrame({\"Count of Days\": day_outages}).\\\n",
-        "    sort_values([\"Count of Days\"], ascending=0)\n",
+        "sort_values([\"Count of Days\"], ascending=0)\n",
         "print(\"Number of outages in each week day:\")\n",
         "d.display(day_outagedf)"
       ],
@@ -933,7 +933,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 364
         },
-        "outputId": "3dbcfaa8-7ffd-466a-d0e7-41da6f955128"
+        "outputId": "7dfb130d-bce1-4c05-a6c4-b5136904f07d"
       },
       "source": [
         "keys = day_outages.keys()\n",
@@ -980,7 +980,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 743
         },
-        "outputId": "8d9355c1-251b-4116-b190-acdf99e2ec2a"
+        "outputId": "7caa6d63-118e-4fbf-a95c-8db7b34f8022"
       },
       "source": [
         "connections = pd.DataFrame({\"Connections\": servers})\n",
@@ -1173,7 +1173,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 417
         },
-        "outputId": "71e60ef1-d77d-4098-df34-16d18952753c"
+        "outputId": "efc92b43-3f6d-446a-8d98-b561e4c4dab8"
       },
       "source": [
         "df = datadf.copy()\n",
@@ -1410,7 +1410,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 295
         },
-        "outputId": "a6a10077-92ed-42ea-c092-eb3d0e8d8ff8"
+        "outputId": "81470c2f-d432-46f5-81ff-3dc16a541dc3"
       },
       "source": [
         "d.display(daydf)"
@@ -1552,7 +1552,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 203
         },
-        "outputId": "be5bbc11-0a07-4b47-8494-6279892666e1"
+        "outputId": "179ded3d-a90d-41e9-a496-e5a69d5b9a7f"
       },
       "source": [
         "d.display(daydf_analyse)"
@@ -1676,12 +1676,11 @@
         "id": "UMq8RzMYe_Fp"
       },
       "source": [
-        "hourdf = df.groupby(\"Hour\").agg({\n",
-        "    \"Latency\": \"mean\",\n",
-        "    \"Jitter\": \"mean\",\n",
-        "    \"Download\": \"mean\",\n",
-        "    \"Upload\": \"mean\",\n",
-        "    \"Packet Loss\": \"mean\"}).round(2)"
+        "hourdf = df.groupby(\"Hour\").agg({\"Latency\": \"mean\",\n",
+        "                                 \"Jitter\": \"mean\",\n",
+        "                                 \"Download\": \"mean\",\n",
+        "                                 \"Upload\": \"mean\",\n",
+        "                                 \"Packet Loss\": \"mean\"}).round(2)"
       ],
       "execution_count": null,
       "outputs": []
@@ -1694,7 +1693,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 819
         },
-        "outputId": "aadb0279-ad1f-4d2e-977f-ade402341bc8"
+        "outputId": "81efb29c-0cd8-494f-fdf2-abc4436f2989"
       },
       "source": [
         "d.display(hourdf)"
@@ -1989,7 +1988,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 203
         },
-        "outputId": "e854bef4-e833-4f37-b512-53c2679ee64b"
+        "outputId": "365bc114-3016-41c9-8760-2a6a7267b275"
       },
       "source": [
         "d.display(hourdf_analyse)"
@@ -2115,7 +2114,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 417
         },
-        "outputId": "9345c71a-18c1-4db9-a92f-85ed4c10fca6"
+        "outputId": "feed970d-9f79-463b-9bc4-9cd7ca9e215e"
       },
       "source": [
         "d.display(df)"
@@ -2341,7 +2340,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 447
         },
-        "outputId": "078e4c3f-7a3c-4797-bdf9-faca033b2f09"
+        "outputId": "69f7159d-91f2-4459-9eeb-3f44b50a63d1"
       },
       "source": [
         "d.display(analysed)"
@@ -2543,7 +2542,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 360
         },
-        "outputId": "05367586-84ac-4d2c-e055-7c92de570006"
+        "outputId": "40f66019-5189-4b1e-e00c-36eb065b8fda"
       },
       "source": [
         "d.display(overall_df)"
@@ -2835,7 +2834,7 @@
         "for col in columns:\n",
         "    overall_df[(col, \"idxmin\")] = analysed.loc[overall_df[col][\"idxmin\"]]\\\n",
         "    .index.get_level_values(1)\n",
-        "    overall_df[(col,\"idxmax\")] = analysed.loc[overall_df[col][\"idxmax\"]]\\\n",
+        "    overall_df[(col, \"idxmax\")] = analysed.loc[overall_df[col][\"idxmax\"]]\\\n",
         "    .index.get_level_values(1)"
       ],
       "execution_count": null,
@@ -2863,7 +2862,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 326
         },
-        "outputId": "01816862-32cb-4614-d8d1-1cb3b9e5f815"
+        "outputId": "e61488b0-0d90-4152-997a-9e02b4536256"
       },
       "source": [
         "d.display(overall_df)"
@@ -3155,7 +3154,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 326
         },
-        "outputId": "27e2a6df-7b9b-403b-edde-c74aff34f57b"
+        "outputId": "1fcd7cb6-5213-45be-aab5-7c8ac1429bf7"
       },
       "source": [
         "d.display(final_df)"
@@ -3366,12 +3365,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "85142a2f-7c8e-435a-9bba-771ee91aa521"
+        "outputId": "b4479084-0ba3-44e3-eee0-90dc98af1890"
       },
       "source": [
         "Min_Latency_Day = overall_df[\"Latency\", \"min\"].idxmin()\n",
         "Corresponding_hour = overall_df.loc[overall_df[\"Latency\", \"min\"].idxmin()][\"Latency\"][\"Hour (Min)\"]\n",
-        "print(\"Best day and hour for low latency activities: \", \n",
+        "print(\"Best day and hour for low latency activities: \",\n",
         "    Min_Latency_Day, \"and\", Corresponding_hour, \"IST.\")"
       ],
       "execution_count": null,
